--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ header {
   z-index: -2;
 }
 h1 {
-  color: whitesmoke;
+  color: white;
 }
 /* switch button */
 
@@ -168,7 +168,7 @@ h1 {
   width: 7rem;
   height: 2rem;
   display: flex;
-  border-radius: 0.5rem;
+  border-radius: 10.5rem;
   align-items: center;
   justify-content: space-around;
   border: none;
@@ -188,7 +188,7 @@ h1 {
   top: 0;
   left: 0;
   background: #49a6e9;
-  border-radius: 0.5rem;
+  border-radius: 10.5rem;
   margin: 0;
   display: block;
   transition: all 0.3s linear;
@@ -197,7 +197,7 @@ h1 {
   left: 50%;
 }
 /* header after */
-/* header::after {
+header::after {
   content: "";
   position: absolute;
   top: 0;
@@ -206,4 +206,4 @@ h1 {
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
   z-index: -1;
-} */
+}
