--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ Video
   left: 0;
   right: 0;
   bottom: 0;
-  background: whitesmoke;
+  background: black;
   display: grid;
   justify-content: center;
   align-items: center;
